--- a/code/BA - data merger.Rmd
+++ b/code/BA - data merger.Rmd
@@ -77,36 +77,6 @@ Data sets that (as of now) look very promising:
 
 17 in total
 
-```{r}
-# Create list of all data frames
-# all_data <- list(
-#   women_in_parliament,
-#   basic_sanitation,
-#   basic_water_source,
-#   electricity,
-#   employment_rate,
-#   material_footprint,
-#   forest_area,
-#   mean_years_in_school,
-#   health_worker,
-#   air_pollution,
-#   red_list,
-#   poverty,
-#   life_expectancy,
-#   income,
-#   income_share_20,
-#   CO2,
-#   murder
-# )
-```
-
-```{r}
-
-# Merge all data frame together by the country attribute
-
-# general <- all_data %>% reduce(full_join, by="dmu")
-```
-
 Merge with merge function
 
 ```{r}
@@ -147,11 +117,6 @@ general <-
   CO2, by = "dmu", all = TRUE),
   murder, by = "dmu", all = TRUE),
   foreign_investment, by = "dmu", all = TRUE)
-                                  
-
-```
-
-```{r}
 
 # Change column names to something meaningful
 colnames(general) <- c(
@@ -178,6 +143,8 @@ colnames(general) <- c(
 
 # convert tibble to data frame
 general <- as.data.frame(general)
+                                  
+
 ```
 
 ```{r}
@@ -202,14 +169,14 @@ final_12 <- merger(c(
   "life_expectancy",
   "income",
   "mean_years_in_school",
-  "murder"
-  # "income_share_20"
+  "murder",
+  "income_share_20"
 ))
 
 nrow(final_12)
 ```
 
-Unfortunately, not many dmus are left. -\> 637
+Unfortunately, not many dmus are left. -\> 637 (937 with interpolation)
 
 ```{r}
 check0(final_12)
