--- a/code/BA - data preparation - 2.Rmd
+++ b/code/BA - data preparation - 2.Rmd
@@ -44,7 +44,7 @@ source("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/code/functions.R")
 ## Load data
 
 ```{r}
-data <- read_final(12)
+data <- read_final(13)
 str(data)
 ```
 
@@ -112,14 +112,18 @@ each value along the middle between min and max
 # 
 # data$foreign_investment <- mirror + (mirror - data$foreign_investment)
 
-data$foreign_investment <- (data$foreign_investment - 450) * (-1)
+# data$foreign_investment <- (data$foreign_investment - (max(data$foreign_investment)+1)) * (-1)
+
+data$foreign_investment <- (data$foreign_investment - (min(data$foreign_investment))+1)
 ```
 
 Now, Luxembourg 2007 and Malta 2007 switched places
 
 ### Government debts
 
-No data yet
+The less the better \<- good
+
+No entry 0 or less :)
 
 ### Life expectancy
 
@@ -168,6 +172,6 @@ It cannot be below 0. No adjustment needed
 ## Export adjusted data set
 
 ```{r}
-final_112 <- data
-write_final(final_112)
+final_113 <- data
+write_final(final_113)
 ```
